--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <section id="stores-list">
           <div class='row'>
             <div id="stores-data-container"></div>
+              <div id="map"></div>
             <div id="stores-pagination-container"></div>
           </div>
       </section>
@@ -47,6 +48,10 @@
       <script type="text/javascript" src="external/js/pagination.min.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
       <script type="text/javascript" src="js/LCBO.js"></script>
+      
+    <!-- Gmaps -->
+    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="external/js/gmaps.js"></script>
       
   </body>
 </html>
