fixed font colors

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       
       <section id="stores-list">
           <div class='row'>
+            <div id="stores-list-heading"></div>
             <div id="stores-data-container"></div>
               <div id="map"></div>
             <div id="stores-pagination-container"></div>
