--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
       
       </header>
-      <section class="seasonal-beverages">
+      <section id="seasonal-beverages">
           <div class="row">
               <h1>Seasonal Beverages</h1>
               <ul class="seasonal-list" class="clearfix">
@@ -47,6 +47,7 @@
     
       <script type="text/javascript" src="external/js/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="external/js/pagination.min.js"></script>
+      <!-- order matters! LCBO before main -->
       <script type="text/javascript" src="js/LCBO.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
 
