--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="external/css/grid.css">
     <link rel="stylesheet" type="text/css" href="external/css/animate.css"> 
     <link rel="stylesheet" type="text/css" href="css/site.css">
+      <link rel="stylesheet" type="text/css" href="css/media.css">
       
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
